           setProperty('AEL_NoIntro_stat', 'NoIntro_None')
           setProperty('AEL_PClone_stat',  'PClone_Parent')
           setProperty('AEL_PClone_stat',  'PClone_Clone')
           setProperty('AEL_PClone_stat',  'PClone_Unknown')

FEATURE  Add Retroplayer support.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/33

WIP      Default to launcher icon if ROM icon is missing.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2500040#pid2500040

WIP      Update launching mechanism. User Python subprocess module on all platforms and not the
         deprecated os.system(). Current patched subprocess_hack module is from Python 2.4. Current 
         Python version in Kodi is 2.7.
         os.system(), os.open(), etc. are deprecated, and the subprocess module should be used 
         instead for all platforms. A parser of arguments must be coded in order to use the 
         subprocess module.

WIP      Log emulator/standalone launcher stdout/stderr into a file. Requires new launching
         mechanism based on subprocess module. 

PARTIAL  Add nplayers metadata field to ROMs. Billyc999 database has nplayers NFO.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2407055#pid2407055

PARTIAL  Add ESRB/MPAA/PEGI rating? >> User ESRB, new metadata field esrb in ROMs.

WIP      Have a setting to restrict ROMs displayed based on rating.

PARTIAL  Support for multidisc systems. Have a look to NOTES.md for more details about the AEL
         implementation.
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2495480#pid2495480

         AL ROM scanner only added the first disc to the database and skipped disc numbers
         from 2 to 9.
         https://github.com/Wintermute0110/plugin.program.advanced.launcher/blob/master/resources/lib/launcher_plugin.py#L2088

         At ROM launching, if any of the strings ['.cd1', '-cd1', '_cd1', ' cd1'] is found on the